--- a/configuration/project_config.yaml
+++ b/configuration/project_config.yaml
@@ -1,5 +1,5 @@
 DATA_DIRECTORY: input
 TRAIN_CSV: input/train.csv
-SUBMISSION_CSV: input/sample_submission.csv
+TEST_CSV: input/sample_submission.csv
 
 SEED: 42
