--- a/configuration/efficient_net/01a_effnet_b0_28.yaml
+++ b/configuration/efficient_net/01a_effnet_b0_28.yaml
@@ -15,7 +15,7 @@ MODEL:
   PRETRAINED: True
   IMAGE_SIZE: 28
   NUM_CLASSES: 28
-  MODEL_PATH: saved_models/glasses
+  MODEL_PATH: saved_models/efficient_net
 
 TRAIN:
   EPOCHS: 1
@@ -37,5 +37,5 @@ TRAIN:
   WEIGHTS: ~
 
 PREDICT:
-  PRED_CSV: oof_preds/efficient_net/01a_effnet_b0_28.csv
+  OOF_CSV: oof_preds/efficient_net/01a_effnet_b0_28.csv
   TEST_CSV: test_outputs/efficient_net/01a_effnet_b0_28.csv
